--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -2,7 +2,7 @@ backToTop: "Scroll to top"
 changeLanguage: "Change language"
 changeTheme: "Change theme"
 copyCode: "Copy code"
-copyright: "© 2024 ChatGPT4PCG Team"
+copyright: "© 2025 LLMs4PCG Team"
 dark: "Dark"
 editThisPage: "Edit this page on GitHub →"
 lastUpdated: "Last updated on"
